docs/tests/parser/structs/valid/StructUnaryOperatorOnly.src
struct Neg {
    let int val;
    operator ~(Neg a) { }
}
