docs/tests/parser/structs/invalid/StructOperatorIndexMissingClose.src
struct Foo {
    operator [(Foo a, int b) { }
}
